--- a/popup.html
+++ b/popup.html
@@ -2,24 +2,85 @@
 <html>
 <head>
   <title>TikTok Comment Exporter</title>
+  <meta charset="UTF-8">
   <style>
+    :root {
+      --bg-color: #1a1a1a;
+      --text-color: #e0e0e0;
+      --primary-color: #00f2ea;
+      --secondary-color: #2a2a2a;
+      --border-radius: 8px;
+    }
     body {
-      width: 200px;
-      font-family: sans-serif;
+      width: 280px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      margin: 0;
+      padding: 16px;
       text-align: center;
     }
+    #header {
+      margin-bottom: 16px;
+    }
+    #tab-title {
+      font-size: 14px;
+      font-weight: 600;
+      margin: 0 0 4px 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    #comment-count {
+      font-size: 12px;
+      margin: 0;
+      opacity: 0.7;
+    }
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
     button {
-      margin: 5px;
       padding: 10px;
-      width: 150px;
+      width: 100%;
       cursor: pointer;
+      border: none;
+      border-radius: var(--border-radius);
+      background-color: var(--secondary-color);
+      color: var(--text-color);
+      font-size: 14px;
+      font-weight: 500;
+      transition: background-color 0.2s ease;
+    }
+    button:hover {
+      background-color: #3a3a3a;
+    }
+    button.primary {
+      background-color: var(--primary-color);
+      color: #000;
+    }
+    button.primary:hover {
+      background-color: #00d4c7;
+    }
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   </style>
 </head>
 <body>
-  <button id="exportJson">Export as JSON</button>
-  <button id="copyJson">Copy as JSON</button>
-  <button id="copyCsv">Copy Comments as CSV</button>
+  <div id="header">
+    <h1 id="tab-title">Loading...</h1>
+    <p id="comment-count">0 comments captured</p>
+  </div>
+
+  <div class="button-group">
+    <button id="exportJson" class="primary">Export as JSON</button>
+    <button id="copyJson">Copy as JSON</button>
+    <button id="copyText">Copy Comments (Text)</button>
+  </div>
+
   <script src="dist/popup.js"></script>
 </body>
 </html>
