dynamic comment count auto scroll down file name reload comments not tiktok tab

--- a/popup.html
+++ b/popup.html
@@ -76,6 +76,8 @@
   </div>
 
   <div class="button-group">
+    <button id="reload-comments" style="display: none;">Reload Comments</button>
+    <button id="scroll-to-bottom">Auto-scroll</button>
     <button id="exportJson" class="primary">Export as JSON</button>
     <button id="copyJson">Copy as JSON</button>
     <button id="copyText">Copy Comments (Text)</button>
