--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,42 @@
       flex-direction: column;
       gap: 8px;
     }
+    .split-button-container {
+      display: flex;
+      border-radius: var(--border-radius);
+      overflow: hidden;
+    }
+    .split-button-container button {
+      padding: 10px;
+      cursor: pointer;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      transition: background-color 0.2s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 0;
+    }
+    .split-button-container .main-action {
+      flex-grow: 1;
+      background-color: var(--secondary-color);
+      color: var(--text-color);
+    }
+    .split-button-container .side-action {
+      width: 40px;
+      border-left: 1px solid #4f4f4f;
+      background-color: var(--primary-color);
+    }
+    .split-button-container .side-action svg {
+      fill: #000;
+    }
+    .split-button-container .main-action:hover {
+      background-color: #3a3a3a;
+    }
+    .split-button-container .side-action:hover {
+      background-color: #00d4c7;
+    }
     button {
       padding: 10px;
       width: 100%;
@@ -76,11 +112,26 @@
   </div>
 
   <div class="button-group">
-    <button id="reload-comments" style="display: none;">Reload Comments</button>
+    <button id="reload-comments" style="display: none;">Reload Page</button>
     <button id="scroll-to-bottom">Auto-scroll</button>
-    <button id="exportJson" class="primary">Export as JSON</button>
-    <button id="copyJson">Copy as JSON</button>
-    <button id="copyText">Copy Comments (Text)</button>
+    <div class="split-button-container">
+        <button id="exportJson" class="main-action">Save JSON</button>
+        <button id="copyJson" class="side-action">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+            </svg>
+        </button>
+    </div>
+    <div class="split-button-container">
+        <button id="exportText" class="main-action">Save Text</button>
+        <button id="copyText" class="side-action">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+            </svg>
+        </button>
+    </div>
   </div>
 
   <script src="dist/popup.js"></script>
