--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,17 @@
       font-size: 12px;
       margin: 0;
       opacity: 0.7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+    }
+    #reload-link {
+      color: #ff4d4d;
+      cursor: pointer;
+      text-decoration: underline;
+      font-weight: 600;
+      display: none; /* Hidden by default */
     }
     .button-group {
       display: flex;
@@ -108,11 +119,13 @@
 <body>
   <div id="header">
     <h1 id="tab-title">Loading...</h1>
-    <p id="comment-count">0 comments captured</p>
+    <p id="comment-count">
+      <span>0 comments captured</span>
+      <span id="reload-link">(reload)</span>
+    </p>
   </div>
 
   <div class="button-group">
-    <button id="reload-comments" style="display: none;">Reload Page</button>
     <button id="scroll-to-bottom">Auto-scroll</button>
     <div class="split-button-container">
         <button id="exportJson" class="main-action">Save JSON</button>
