--- a/popup.html
+++ b/popup.html
@@ -5,114 +5,135 @@
   <meta charset="UTF-8">
   <style>
     :root {
-      --bg-color: #1a1a1a;
-      --text-color: #e0e0e0;
-      --primary-color: #00f2ea;
-      --secondary-color: #2a2a2a;
-      --border-radius: 8px;
+      --bg-color: #f4f5f7;
+      --text-color: #172b4d;
+      --text-color-light: #6b778c;
+      --primary-color: #0052cc;
+      --primary-color-hover: #0065ff;
+      --danger-color: #de350b;
+      --danger-color-hover: #bf2600;
+      --card-bg-color: #ffffff;
+      --border-color: #dfe1e6;
+      --border-radius: 6px;
+      --shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
     }
     body {
-      width: 280px;
+      width: 320px;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
       margin: 0;
       padding: 16px;
-      text-align: center;
     }
     #header {
+      background-color: var(--card-bg-color);
+      border-radius: var(--border-radius);
+      padding: 16px;
       margin-bottom: 16px;
+      text-align: center;
+      box-shadow: var(--shadow);
     }
     #tab-title {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 600;
-      margin: 0 0 4px 0;
+      margin: 0 0 8px 0;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
     #comment-count {
-      font-size: 12px;
+      font-size: 13px;
       margin: 0;
-      opacity: 0.7;
+      color: var(--text-color-light);
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 4px;
+      gap: 6px;
     }
     #reload-link {
-      color: #ff4d4d;
+      color: var(--primary-color);
       cursor: pointer;
-      text-decoration: underline;
-      font-weight: 600;
+      text-decoration: none;
+      font-weight: 500;
       display: none; /* Hidden by default */
+    }
+    #reload-link:hover {
+      text-decoration: underline;
     }
     .button-group {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 12px;
     }
-    .split-button-container {
-      display: flex;
+    .button-container {
+      display: grid;
+      grid-template-columns: 1fr auto;
       border-radius: var(--border-radius);
       overflow: hidden;
+      box-shadow: var(--shadow);
+      border: 1px solid var(--border-color);
     }
-    .split-button-container button {
-      padding: 10px;
+    .button-container button {
+      padding: 12px;
       cursor: pointer;
       border: none;
       font-size: 14px;
       font-weight: 500;
-      transition: background-color 0.2s ease;
+      transition: background-color 0.2s ease, color 0.2s ease;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 0;
+      gap: 8px;
     }
-    .split-button-container .main-action {
-      flex-grow: 1;
-      background-color: var(--secondary-color);
+    .button-container .main-action {
+      background-color: var(--card-bg-color);
       color: var(--text-color);
+      justify-content: flex-start;
+      padding-left: 16px;
     }
-    .split-button-container .side-action {
-      width: 40px;
-      border-left: 1px solid #4f4f4f;
+    .button-container .main-action:hover {
+      background-color: #f7f8f9;
+    }
+    .button-container .side-action {
+      background-color: var(--card-bg-color);
+      border-left: 1px solid var(--border-color);
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+    .button-container .side-action:hover {
+      background-color: #f7f8f9;
+    }
+    .button-container .side-action svg {
+      fill: #42526e;
+    }
+    #scroll-to-bottom {
+      grid-column: 1 / 3;
       background-color: var(--primary-color);
+      color: white;
+      font-weight: 600;
     }
-    .split-button-container .side-action svg {
-      fill: #000;
+    #scroll-to-bottom:hover {
+      background-color: var(--primary-color-hover);
     }
-    .split-button-container .main-action:hover {
-      background-color: #3a3a3a;
+    #scroll-to-bottom.scrolling {
+      background-color: var(--danger-color);
     }
-    .split-button-container .side-action:hover {
-      background-color: #00d4c7;
+    #scroll-to-bottom.scrolling:hover {
+      background-color: var(--danger-color-hover);
     }
-    button {
-      padding: 10px;
-      width: 100%;
-      cursor: pointer;
-      border: none;
-      border-radius: var(--border-radius);
-      background-color: var(--secondary-color);
-      color: var(--text-color);
-      font-size: 14px;
-      font-weight: 500;
-      transition: background-color 0.2s ease;
+    #scroll-to-bottom svg {
+      fill: white;
     }
-    button:hover {
-      background-color: #3a3a3a;
-    }
-    button.primary {
-      background-color: var(--primary-color);
-      color: #000;
-    }
-    button.primary:hover {
-      background-color: #00d4c7;
-    }
-    button:disabled {
-      opacity: 0.5;
+    button:disabled,
+    button:disabled:hover {
       cursor: not-allowed;
+      background-color: #f4f5f7 !important;
+      color: #a5adba !important;
+      opacity: 1;
+    }
+    button:disabled svg {
+      fill: #a5adba !important;
     }
   </style>
 </head>
@@ -126,9 +147,25 @@
   </div>
 
   <div class="button-group">
-    <button id="scroll-to-bottom">Auto-scroll</button>
-    <div class="split-button-container">
-        <button id="exportJson" class="main-action">Save JSON</button>
+    <div class="button-container">
+      <button id="scroll-to-bottom">
+        <svg class="icon-scroll" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="display: inline-block;">
+          <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+        </svg>
+        <svg class="icon-stop" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="display: none;">
+          <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"/>
+        </svg>
+        <span>Auto-scroll</span>
+      </button>
+    </div>
+    <div class="button-container">
+        <button id="exportJson" class="main-action">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+              <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg>
+            <span>Save JSON</span>
+        </button>
         <button id="copyJson" class="side-action">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
@@ -136,8 +173,14 @@
             </svg>
         </button>
     </div>
-    <div class="split-button-container">
-        <button id="exportText" class="main-action">Save Text</button>
+    <div class="button-container">
+        <button id="exportText" class="main-action">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+              <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg>
+            <span>Save Text</span>
+        </button>
         <button id="copyText" class="side-action">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
